--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -3,9 +3,13 @@
     <title>Password Reset Request</title>
   </head>
   <body>
-    <p>A request to reset your password was received.  If you did not make this request you can ignore this email.  Your account has not been altered.</p>
-    <p><%= link_to 'To reset your password follow this link', edit_password_url(@resource, reset_password_token: @token) %></p>
-    <p>If the link above does not work copy and paste the following address into a browser <%= edit_password_url(@resource, reset_password_token: @token) %></p>
-    <p>The request will only be active for 12 hours. If you are unable to complete the process in that time you may make another request.</p>
+    <p>A request to change your password on your account was received. If you did not make this request, you can ignore this email. No account information has been created or accessed.</p>
+    <p><%= link_to 'Click here to change your password', edit_password_url(@resource, reset_password_token: @token) %></p>
+    <p>If the link above does not work, please copy and paste the following address into a browser: <%= edit_password_url(@resource, reset_password_token: @token) %></p>
+    <p>The request will only be active for 24 hours. If you are unable to complete the process in that time, you may make another request.</p>
+    <p>
+      Thank you,<br><br>
+      The Bozzuto SmartRent Team
+    </p>
   </body>
 </html>
