--- a/app/views/smartrent/residents/change_password.html.erb
+++ b/app/views/smartrent/residents/change_password.html.erb
@@ -42,7 +42,7 @@
       </div>
 
       <div class="formInstructions">
-        <p>If you have forgotten your password, please enter your email address. If your email is on file, a link will be sent to you allowing you to create a new password.</p>
+        <p>If you need to reset your password, please enter your email address. If your email is on file, a link will be sent to you allowing you to create a new password.</p>
 
         <p>For security reasons, this request will be canceled 24 hours after it is submitted. You may re-request your password be reset if that happens.</p>
       </div>
