smartrent images, copy updates

--- a/app/assets/stylesheets/smartrent/layout.css.erb
+++ b/app/assets/stylesheets/smartrent/layout.css.erb
@@ -168,32 +168,25 @@ label{
   width:100%;
 }
 
-#error-explanation {
- border: 1px solid red;
- margin: 0 auto;
+#error-subtle {
+ border: 1px solid #ddd;
+ margin: 20px auto;
  padding: 0;
 }
-#error-explanation h2 {
- background-color: red;
- color: #fff;
- font-size: 15px;
+#error-subtle p {
  margin: 0;
  padding: 10px;
 }
-#error-explanation p {
- margin: 0;
- padding: 15px 10px 5px;
-}
-#error-explanation ul {
- margin-left: 15px;
+#error-subtle ul {
+ margin: 0 15px 15px 15px;
  padding: 0 10px;
 }
-#error-explanation ul li {
- font-size: 12px;
+#error-subtle ul li {
+ font-size: 15px;
  list-style: outside none square;
 }
 .field_with_errors input, .field_with_errors textarea {
- border: 1px solid #cccccc;
+ border: 1px solid #000;
 }
 
 .dropshadow{
@@ -203,14 +196,14 @@ label{
 
 .banner .fixedWidth,
 #contentWrapper .fixedWidth{
-  max-width:1100px;
+  max-width:1132px;
   width:100%;
   overflow:hidden;
   margin:0px auto 0px auto;
 }
 
 .banner .fixedWidth .images{
-  max-width: 1100px;
+  max-width: 1132px;
   width: 100%;
 }
 
@@ -223,7 +216,7 @@ label{
 .banner .fixedWidth .images .right{
   float:right;
   width: 100%;
-  max-width: 848px;
+  max-width: 880px;
 }
 
 .banner .fixedWidth .images .left img,
@@ -241,6 +234,9 @@ label{
   width:707px;
   color:#7395bc;
   padding:34px 0 10px 0;
+}
+.banner .fixedWidth .no-transform {
+  text-transform: none !important;
 }
 
 #contentWrapper #slides,
@@ -574,7 +570,7 @@ label{
   width:100%;
   max-width:672px;
   margin:0px auto 0px auto;
-  padding-left:268px;
+  padding-left:185px;
   padding-top:1px;
   font-family:"nimbus-sans-condensed",Arial,Helvetica Neue,Helvetica,sans-serif;
   font-size:.95em;
@@ -1703,7 +1699,7 @@ label{
 }
 
 .member .memberStatementLeft .video img{
-  width: 100%;
+  max-width: 638px;
 }
 
 .member .memberStatementLeft #contentWrapper #slides{
@@ -1924,19 +1920,19 @@ label{
 
 /* member slider */
 .member #contentWrapper #slides {
-  width:676px;
+  width:640px;
 }
 .member #contentWrapper #slides .slides_container {
-  width:675px;
+  width:639px;
   height:187px;
 }
 .member #slides .threeWide{
-  width:679px;
+  width:640px;
 }
 .member #slides .threeWide .propertySlide{
-  width:218px;
+  width:205px;
   margin:0 0 0 12px;
-  height:187px;
+  height:174px;
 }
 
 .member #slides .threeWide .propertySlide:first-child{
