--- a/app/views/devise/confirmations/_password_create_form.html.erb
+++ b/app/views/devise/confirmations/_password_create_form.html.erb
@@ -1,7 +1,7 @@
 <div class="formInputs">
   <%= form_for resource, :as => resource_name, :url => update_member_confirmation_path, :html => {:method => 'put'}, :id => 'activation-form' do |f| %>
     <div class="message">
-      <%= render "layouts/error_messages", :target => resource, :header_message => "Confirmation Failed" %>
+      <%= render "layouts/contact_on_error", :target => resource, :header_message => "Confirmation Failed" %>
     </div>
     <div class="labelText">
       <%= f.label :password, "Choose a Password" %>
