--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -24,7 +24,7 @@
       <div class="formInstructions">
         <p>
           An unlock email will be sent to your email address. 
-          If you do not receive an email please check your spam folder.
+          If you do not receive an email, please check your spam folder.
         </p>
       </div>
     </div>
