--- a/app/views/layouts/smartrent/_footer.html.erb
+++ b/app/views/layouts/smartrent/_footer.html.erb
@@ -13,6 +13,10 @@
         <li>
           <%= link_to "Website Disclaimer", smartrent.website_disclaimer_path %>
         </li>
+        
+        <li>
+          <%= link_to "Contact Us", smartrent.new_contact_path %>
+        </li>
       </ul>
     </div>
 
