--- a/app/views/layouts/smartrent/_left_nav_links.html.erb
+++ b/app/views/layouts/smartrent/_left_nav_links.html.erb
@@ -28,5 +28,5 @@
 <% end %>
 
 <li>
-  <a href="<%= raw "http://#{SR_HOST}" %>" target="_blank"> <i class="fa fa-globe fa-fw"></i> Smartrent Website </a>
+  <a href="<%= raw "http://#{SR_HOST}" %>" target="_blank"> <i class="fa fa-globe fa-fw"></i> SmartRent Website </a>
 </li>
