--- a/app/views/smartrent/admin/properties/show.html.erb
+++ b/app/views/smartrent/admin/properties/show.html.erb
@@ -97,7 +97,7 @@
       <%= link_to @property.promotion_url, @property.promotion_url if @property.promotion_url %>
     </p>
     <p>
-      <b>Smartrent Status:</b>
+      <b>SmartRent Status:</b>
       <%= @property.smartrent_status %>
     </p>
     
