--- a/app/views/smartrent/contacts/_form.html.erb
+++ b/app/views/smartrent/contacts/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for(@contact) do |f| %>
-  <%= render "layouts/error_messages", :target => @contact, :header_message => "Message sending failed" %>
+  <%= render "layouts/error_messages_subtle", :target => @contact, :header_message => "Message sending failed" %>
   <div class="actions">
     <%= f.submit :class => "btn btn-primary" %>
     <%= link_to 'Cancel', contacts_path, :class => "btn btn-default" %>
