--- a/app/views/smartrent/pages/home.html.erb
+++ b/app/views/smartrent/pages/home.html.erb
@@ -2,11 +2,11 @@
   <div class="fixedWidth">
     <div class="images">
       <div class="left">
-        <%= image_tag "homePageLeft.jpg" %>
+        <%= image_tag "LEFT-Home-Page-252x380.jpg" %>
       </div>
 
       <div class="right">
-        <%= image_tag "homePage.jpg" %>
+        <%= image_tag "RIGHT-Home-Page-880x380.jpg" %>
       </div>
     </div>
   </div>
