--- a/app/views/smartrent/properties/_layout.html.erb
+++ b/app/views/smartrent/properties/_layout.html.erb
@@ -2,10 +2,10 @@
   <div class="fixedWidth">
     <div class="images clearfix">
       <div class="left">
-        <%= image_tag "apartmentsleft.jpg" %>
+        <%= image_tag "LEFT-Apartments-252x380.jpg" %>
       </div>
       <div class="right">
-        <%= image_tag "apartments.jpg" %>
+        <%= image_tag "RIGHT-Apartments-880x380-2.jpg" %>
       </div>
     </div>
   </div>
