--- a/app/views/smartrent/properties/index.html.erb
+++ b/app/views/smartrent/properties/index.html.erb
@@ -2,7 +2,7 @@
 <section class="wrapper clearfix">
   <%= render partial: "filters"%>
   <div id="contactRight">
-    <p>Earn SmartRent dollars while leasing one of these properties.</p>
+    <p>Earn SmartRent credits while leasing one of these properties.</p>
 
     <div class="toggle clearfix">
       <div class="item search-property-item listOn" id="listResults">
