--- a/app/views/smartrent/residents/change_password.html.erb
+++ b/app/views/smartrent/residents/change_password.html.erb
@@ -12,7 +12,7 @@
 
       <div class="formInputs">
         <%= form_for(@resident, url: update_password_residents_path) do |f| %>
-          <%= render "layouts/error_messages", :target => @resident %>
+          <%= render "layouts/contact_on_error", :target => @resident %>
           
           <div class="labelText">
             <%= f.label :current_password %>
