--- a/app/views/smartrent/residents/statement.html.erb
+++ b/app/views/smartrent/residents/statement.html.erb
@@ -9,7 +9,7 @@
     </div>
 
     <div class="video">
-      <%= image_tag "moviePlaceHolder.jpg" %>
+      <%= image_tag "Member-Statement-638x426.jpg" %>
     </div>
 
     <div id="contentWrapper">
