--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -10,7 +10,7 @@
           You must activate your account prior to logging in using the email address that matches your lease.
         </p>
         <p>
-          Enter your email address in the box below
+          Enter your email address in the box below.
           Click the "Activate Account" button below to begin the activation process.
         </p>
       </div>
@@ -18,7 +18,7 @@
       <div class="formInputs">
         <%= form_for(resource, as: resource_name, url: member_confirmation_path, html: { method: :post }) do |f| %>
           <div class="message">
-            <%= render "layouts/error_messages", :target => resource, :header_message => "Activation Failed" %>
+            <%= render "layouts/contact_on_error", :target => resource, :header_message => "Activation Failed" %>
           </div>
           <div class="labelText">
             <%= f.label :email, "Email Address" %>
@@ -36,7 +36,7 @@
       <div class="formInstructions">
         <p>
           An activation email will be sent to your email address. 
-          If you do not receive an email please check your spam folder.
+          If you do not receive an email, please check your spam folder.
         </p>
       </div>
     </div>
