--- a/app/views/smartrent/homes/_layout.html.erb
+++ b/app/views/smartrent/homes/_layout.html.erb
@@ -1,9 +1,9 @@
 <div class="banner dropshadow">
   <div class="fixedWidth">
     <div class="images clearfix">
-      <div class="left"><%= image_tag "newHomeLeft.jpg" %></div>
+      <div class="left"><%= image_tag "LEFT-New-Homes-252x380.jpg" %></div>
 
-      <div class="right"><%= image_tag "newHome.jpg" %></div>
+      <div class="right"><%= image_tag "RIGHT-New-Homes-880x380-2.jpg" %></div>
     </div>
   </div>
 </div>
