--- a/app/views/smartrent/pages/faq.html.erb
+++ b/app/views/smartrent/pages/faq.html.erb
@@ -2,9 +2,9 @@
   <div class="fixedWidth">
     <div class="images clearfix">
       <div class="left">
-        <%= image_tag "smartRentFAQleft.jpg"%>
+        <%= image_tag "LEFT-SmartRent-Rules-252x380.jpg"%>
       </div>
-      <div class="right"><%= image_tag "smartRentFAQ1.jpg"%></div>
+      <div class="right"><%= image_tag "RIGHT-SmartRent-Rules-880x380-5.jpg"%></div>
     </div>
   </div>
 </div>
@@ -21,10 +21,11 @@
       </div>
 
       <div class="answer">
-        <p>A: SmartRent is Bozzuto’s incentive program that gives you the
-        opportunity to earn *$350 per month credit for the time you rent at
-        <%= link_to "participating Bozzuto-managed apartment properties", find_a_new_home_path %>. It gives you access to
-        automatically-accrued funds towards the purchase of a new <%= link_to "Bozzuto Home", find_a_new_home_path %>.</p>
+        <p>
+          A: SmartRent is Bozzuto’s incentive program that gives you the opportunity to earn *$350 per month credit for the time you rent 
+          at <%= link_to "participating Bozzuto managed apartment properties", find_a_new_home_path %>. 
+          It gives you access to automatically-accrued funds towards the purchase of a new <%= link_to "Bozzuto Home", find_a_new_home_path %>.
+        </p>
       </div>
     </div>
   </div>
@@ -36,16 +37,19 @@
 
     <div class="qa">
       <div class="question">
-        <p>What is the maximum amount of money I can earn toward a purchase of
-        a new <%= link_to "Bozzuto Home", find_a_new_home_path %> by registering in the SmartRent Program?</p>
+        <p>
+          What is the maximum amount of money I can earn toward a 
+          purchase of a new <%= link_to "Bozzuto Home", find_a_new_home_path %> by registering in the SmartRent program?
+        </p>
       </div>
 
       <div class="answer">
-        <p>A: Renters at specific Bozzuto-managed properties that participate
-        in the SmartRent program will earn $350 per month toward the purchase
-        of a new home up to a maximum of $10,000. Visit the <%= link_to "Find a
-        SmartRent Apartment", find_apartments_path %> page to see which Bozzuto properties
-        participate in the SmartRent program.</p>
+        <p>
+          A: Renters at specific Bozzuto managed properties that participate in the SmartRent program will 
+          earn $350 per month toward the purchase of 
+          a new home up to a maximum of $10,000. 
+          Visit the <%= link_to "Find a SmartRent Apartment", find_apartments_path %> page to see which Bozzuto properties participate in the SmartRent program.
+        </p>
       </div>
     </div>
   </div>
@@ -57,19 +61,19 @@
 
     <div class="qa">
       <div class="question">
-        <p>I have been renting at a <%= link_to "Bozzuto-managed
-        community", find_apartments_path %> for some time and it offers the SmartRent program. What
-        happens to those funds?</p>
+        <p>
+          I have been renting at a <%= link_to "Bozzuto managed community", find_apartments_path %> for some time and it offers the SmartRent program. What happens to those funds?
+        </p>
       </div>
 
       <div class="answer">
-        <p>A: As a Bozzuto SmartRent community resident, you automatically
-        accrue funds. Once you activate your online account on this website
-        with the e-mail address used on your lease, you can view your
-        accumulated funds in your SmartRent profile. You are eligible to use
-        these funds towards the purchase of a new <%= link_to "Bozzuto Home", find_a_new_home_path %> after
-        12 consecutive months of occupancy at a participating Bozzuto-managed
-        apartment community.</p>
+        <p>
+          A: As a Bozzuto SmartRent community resident, you automatically accrue funds. 
+          Once you activate your online account on this website with the e-mail address used on your lease,
+          you can view your accumulated funds in your SmartRent profile.
+          You are eligible to use these funds towards the purchase of a new <%= link_to "Bozzuto Home", find_a_new_home_path %> after 12 consecutive months 
+          of occupancy at a participating Bozzuto managed apartment community.
+        </p>
       </div>
     </div>
   </div>
@@ -81,13 +85,15 @@
 
     <div class="qa">
       <div class="question">
-        <p>Am I able to use a realtor in my purchase of a Bozzuto Home when I
-        use my SmartRent funds?</p>
+        <p>
+          Am I able to use a realtor in my purchase of a Bozzuto home when I use my SmartRent funds?
+        </p>
       </div>
 
       <div class="answer">
-        <p>A: Yes. However, if you chose to use your realtor, your Smart Rent
-        credits will be reduced by 50%.</p>
+        <p>
+          A: Yes. However, if you chose to use your realtor, your Smart Rent credits will be reduced by 50%.
+        </p>
       </div>
     </div>
   </div>
@@ -103,9 +109,10 @@
       </div>
 
       <div class="answer">
-        <p>A: After you activate your account on this website with the e-mail
-        address used on your lease, you can access your account statement 24/7
-        here at <%= link_to root_url, root_url %> </p>
+        <p>
+          A: After you activate your account on this website with the e-mail address used on your lease, 
+          you can access your account statement 24/7 here at <%= link_to root_url, root_url %>
+        </p>
       </div>
     </div>
   </div>
@@ -117,15 +124,14 @@
 
     <div class="qa">
       <div class="question">
-        <p>If the Bozzuto Homes community is offering other sales incentives,
-        will I still be able to use my SmartRent funds?</p>
+        <p>If the Bozzuto Homes community is offering other sales incentives, will I still be able to use my SmartRent funds?</p>
       </div>
 
       <div class="answer">
-        <p>A: SmartRent funds may be used in conjunction with other promotional
-        offered at certain Bozzuto Homes communities. Please check with the
-        sales manager at the <%= link_to "Bozzuto Homes", find_a_new_home_path %>
-        community of your choice for details.</p>
+        <p>
+          A: SmartRent funds may be used in conjunction with other promotional programs offered at certain Bozzuto Homes communities. 
+          Please check with the sales manager at the <%= link_to "Bozzuto Homes", find_a_new_home_path %> community of your choice for details.
+        </p>
       </div>
     </div>
   </div>
@@ -137,17 +143,16 @@
 
     <div class="qa">
       <div class="question">
-        <p>Can I use my SmartRent funds as earnest money when I sign my new
-        home sales contract?</p>
+        <p>Can I use my SmartRent funds as earnest money when I sign my new home sales contract?</p>
       </div>
 
       <div class="answer">
-        <p>No. SmartRent funds are credited to the purchaser at the time of
-        Deposit/Settlement and can be applied towards closing costs or to
-        reduce your monthly payments. They do not replace the required earnest
-        money deposit funds at time of contract or interim deposits due during
-        the purchase process. Please consult with the sales manager at the
-         <%= link_to "Bozzuto Homes", find_a_new_home_path %> community of your choice for details.</p>
+        <p>
+          No. SmartRent funds are credited to the purchaser at the time of Deposit/Settlement and can be applied towards closing costs 
+          or to reduce your monthly payments. They do not replace the required earnest money deposit funds at time of contract 
+          or interim deposits due during the purchase process. 
+          Please consult with the sales manager at the <%= link_to "Bozzuto Homes", find_a_new_home_path %> community of your choice for details.
+        </p>
       </div>
     </div>
   </div>
@@ -163,9 +168,9 @@
       </div>
 
       <div class="answer">
-        <p>Yes. However, SmartRent funds cannot be used with the purchase of a
-        moderately priced home (MPDU) as provided through various county
-        programs.</p>
+        <p>
+          Yes. However, SmartRent funds cannot be used with the purchase of a moderately priced home (MPDU) as provided through various county programs.
+        </p>
       </div>
     </div>
   </div>
@@ -181,16 +186,17 @@
       </div>
 
       <div class="answer">
-        <p>We can only allow one SmartRent participant per apartment unit.
-        Please contact us with questions.</p>
+        <p>
+          We can only allow one SmartRent participant per apartment unit. Please contact us with questions.
+        </p>
       </div>
     </div>
   </div>
 </div>
 
 <div class="disclaimer">
-  <p>* Program may vary by community. Program rules and eligibility
-  requirements are subject to change without notice. By registering in the
-  SmartRent program, you agree to receive notifications and promotions from
-  Bozzuto Homes.</p>
+  <p>
+    * Program may vary by community. Program rules and eligibility requirements are subject to change without notice.
+    By registering in the SmartRent program, you agree to receive notifications and promotions from Bozzuto Homes.
+  </p>
 </div>
