--- a/app/views/smartrent/pages/official_rules.html.erb
+++ b/app/views/smartrent/pages/official_rules.html.erb
@@ -1,7 +1,7 @@
 <div class="banner dropshadow">
   <div class="fixedWidth">
-    <div class="text">
-      Bozzuto&#039;s SmartRent Program | Rules of the SmartRent Program
+    <div class="text no-transform">
+      Bozzuto SmartRent Program | Rules of Program
     </div>
   </div>
 </div>
@@ -15,11 +15,11 @@
 
   <p>4. If you choose to use a realtor, your SmartRent credits will be reduced by 50%. Please check with the Community Sales Manager at the new Bozzuto Homes community of your choice for details.</p>
 
-  <p>5. If you move to another Bozzuto-managed property with a break in leasing that doesn&#8217;t exceed two months, Bozzuto Homes will honor the existing SmartRent credits. If your new community participates in the SmartRent program, you&#8217;ll begin accruing additional credits immediately upon the start of your new lease. If your break in renting exceeds two months, any SmartRent funds you have previously accrued will expire. SmartRent credits have no cash value.</p>
+  <p>5. If you move to another Bozzuto managed property with a break in leasing that doesn&#8217;t exceed two months, Bozzuto Homes will honor the existing SmartRent credits. If your new community participates in the SmartRent program, you&#8217;ll begin accruing additional credits immediately upon the start of your new lease. If your break in renting exceeds two months, any SmartRent funds you have previously accrued will expire. SmartRent credits have no cash value.</p>
 
   <p>6. Once you become eligible to use your SmartRent credits and have a valid contract on a new Bozzuto home, please notify the Property Manager where you live. Your Bozzuto rental lease will continue to be in effect per the existing terms. However, your SmartRent credits may be used towards lease break or other incurred fees resulting from your lease agreement. Please note that SmartRent credits are not redeemable until you close on your new Bozzuto home.</p>
 
   <p>7. Program rules and eligibility requirements are subject to change without notice. By registering in the SmartRent program, you agree to receive notifications and promotions from Bozzuto Homes. SmartRent funds cannot be used with the purchase of a moderately priced home (MPDU or MIHU) as provided through various county programs. We can only allow one SmartRent participant per lease.</p>
 
-  <p>8. If your participating SmartRent community is sold or changes management, Bozzuto Homes will honor the SmartRent dollars you have accrued for any purchase within 12 months of the management or ownership change.</p>
+  <p>8. If your participating SmartRent community is sold or changes management, Bozzuto Homes will honor the SmartRent credits you have accrued for any purchase within 12 months of the management or ownership change.</p>
 </section>
