--- a/app/views/smartrent/pages/program_rules.html.erb
+++ b/app/views/smartrent/pages/program_rules.html.erb
@@ -1,9 +1,9 @@
 <div class="banner dropshadow">
   <div class="fixedWidth">
     <div class="images clearfix">
-      <div class="left"><%=image_tag "programRulesleft.jpg" %></div>
+      <div class="left"><%=image_tag "LEFT-Why-SmartRent-252x380.jpg" %></div>
 
-      <div class="right"><%=image_tag "programRules.jpg" %></div>
+      <div class="right"><%=image_tag "RIGHT-Why-SmartRent-880x380-4.jpg" %></div>
     </div>
   </div>
 </div>
@@ -15,16 +15,16 @@
     <div class="ruleContent">
       <%=image_tag "smartRent1.jpg" %>
 
-      <h3>Earn money towards a new Bozzuto home when you rent with a
-      Bozzuto-managed rental property.</h3>
+      <h3>Earn money towards a new Bozzuto home when you rent with a Bozzuto managed rental property.</h3>
 
-      <p>When you rent from a Bozzuto SmartRent apartment community, you earn a
-      *$350 dollar credit every month while living in most participating
-      Bozzuto-managed apartments - up to a total of $10,000 - to help you
-      purchase a new condominium, townhome or single-family home from Bozzuto.
-      Simple as that. No gimmicks. Best of all, no cost to you. Your rent will
-      stay the same, whether you choose to use your SmartRent credits or
-      not.</p>
+      <p>
+        When you rent from a Bozzuto SmartRent apartment community, 
+        you earn a *$350 dollar credit every month while living in most participating 
+        Bozzuto managed apartments - up to a total of $10,000 - to help you purchase a new condominium,
+        townhome or single-family home from Bozzuto. Simple as that. 
+        No gimmicks. Best of all, no cost to you. 
+        Your rent will stay the same, whether you choose to use your SmartRent credits or not.
+      </p>
     </div>
   </div>
 
@@ -34,7 +34,7 @@
     <div class="ruleContent">
       <%=image_tag "rule2.jpg" %>
 
-      <h3>You&#039;re in immediately.</h3>
+      <h3>You're in immediately.</h3>
 
       <p>Once you sign a lease, you’re automatically enrolled.</p>
     </div>
@@ -48,8 +48,7 @@
 
       <h3>After you move in, you start accruing credits right away.</h3>
 
-      <p>And after only a year you can use those credits toward buying your own
-      Bozzuto home.</p>
+      <p>And after only a year you can use those credits toward buying your own Bozzuto home.</p>
     </div>
   </div>
 
@@ -61,9 +60,10 @@
 
       <h3>Cut out the middle man!</h3>
 
-      <p>Because you’re already living with us, you won’t need a realtor when
-      you buy your Bozzuto home. However if you chose to use a realtor, you may
-      apply up to 50% of your SmartRent credit.</p>
+      <p>
+        Because you’re already living with us, you won’t need a realtor when you buy your Bozzuto home.
+        However if you chose to use a realtor, you may apply up to 50% of your SmartRent credit.
+      </p>
     </div>
   </div>
 
@@ -75,8 +75,7 @@
 
       <h3>Gonna move?</h3>
 
-      <p>As long as you move to another Bozzuto property, with less than a
-      two-month break, the credits you&#039;ve earned will transfer.</p>
+      <p>As long as you move to another Bozzuto property, with less than a two-month break, the credits you've earned will transfer.</p>
     </div>
   </div>
 
@@ -88,9 +87,10 @@
 
       <h3>Use your SmartRent credits at closing.</h3>
 
-      <p>Once you’re ready to buy a home, you can use your SmartRent credits
-      towards closing costs or to lower your monthly payment. The credits will
-      be ready to use as soon as you close on your new home.</p>
+      <p>
+        Once you’re ready to buy a home, you can use your SmartRent credits towards closing costs or to lower your monthly payment. 
+        The credits will be ready to use as soon as you close on your new home.
+      </p>
     </div>
   </div>
 
@@ -102,10 +102,10 @@
 
       <h3>A few things to know...</h3>
 
-      <p>#1. You’ll get email notifications and quarterly statements from
-      Bozzuto Homes after you move in. #2. Only one person per apartment can
-      earn the credits and #3. Rules and eligibility may change at any
-      time.</p>
+      <p>
+        #1. You’ll get email notifications and quarterly statements from Bozzuto Homes after you move in. 
+        #2. Only one person per apartment can earn the credits and #3. Rules and eligibility may change at any time.
+      </p>
     </div>
   </div>
 
@@ -117,8 +117,7 @@
 
       <h3>Our change won’t change your earned SmartRent credits.</h3>
 
-      <p>We’ll honor your Smartrent credits even if your community is sold or
-      changes management for an entire year after the sale or switch.</p>
+      <p>We’ll honor your Smartrent credits even if your community is sold or changes management for an entire year after the sale or switch.</p>
     </div>
   </div>
 
