--- a/app/views/smartrent/admin/homes/index.html.erb
+++ b/app/views/smartrent/admin/homes/index.html.erb
@@ -10,7 +10,7 @@
         <%= link_to 'New Home', new_admin_home_path, :class => "btn btn-primary" %>
       <% end %>
     </div>
-    <h3>Listing homes</h3>
+    <h3>Listing Homes</h3>
 
     <% if @homes.present? %>
       <table class="table">
