replaced home page image

--- a/app/views/smartrent/pages/home.html.erb
+++ b/app/views/smartrent/pages/home.html.erb
@@ -6,7 +6,7 @@
       </div>
 
       <div class="right">
-        <%= image_tag "RIGHT-Home-Page-880x380.jpg" %>
+        <%= image_tag "RIGHT-Home-Page-880x380.jpg?1" %>
       </div>
     </div>
   </div>
