--- a/app/views/smartrent/pages/faq.html.erb
+++ b/app/views/smartrent/pages/faq.html.erb
@@ -4,7 +4,7 @@
       <div class="left">
         <%= image_tag "LEFT-SmartRent-Rules-252x380.jpg"%>
       </div>
-      <div class="right"><%= image_tag "RIGHT-SmartRent-Rules-880x380-5.jpg"%></div>
+      <div class="right"><%= image_tag "RightSmartRentRules_880x380_V2.jpg"%></div>
     </div>
   </div>
 </div>
@@ -39,7 +39,7 @@
       <div class="question">
         <p>
           What is the maximum amount of money I can earn toward a 
-          purchase of a new <%= link_to "Bozzuto Home", find_a_new_home_path %> by registering in the SmartRent program?
+          purchase of a new <%= link_to "Bozzuto home", find_a_new_home_path %> by registering in the SmartRent program?
         </p>
       </div>
 
