--- a/app/views/smartrent/homes/_layout.html.erb
+++ b/app/views/smartrent/homes/_layout.html.erb
@@ -3,7 +3,7 @@
     <div class="images clearfix">
       <div class="left"><%= image_tag "LEFT-New-Homes-252x380.jpg" %></div>
 
-      <div class="right"><%= image_tag "RIGHT-New-Homes-880x380-2.jpg" %></div>
+      <div class="right"><%= image_tag "RightNewHomes880x380_V2.jpg" %></div>
     </div>
   </div>
 </div>
