--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -30,8 +30,7 @@
         <p>For security reasons, this request will be canceled 24 hours after it is submitted. You may re-request your password be reset if that happens.</p>
         
         <p style="font-weight:bold;">
-          If you moved in previous to 3/1/2016, please select "<%= link_to "Click here to activate", new_member_confirmation_path, :style => "color: #000; text-decoration:none;" %>"
-          to request a new password and this will re-activate your account.
+          If you moved in previous to 3/1/2016, please select "Request Password Reset" to request a new password and this will re-activate your account.
         </p>
       </div>
     </div>
