expand image on hover

--- a/app/assets/javascripts/smartrent/homes.js.erb
+++ b/app/assets/javascripts/smartrent/homes.js.erb
@@ -95,6 +95,10 @@ $(function() {
       }
     }
   });
+  
+  $('.home-img').imageTooltip({
+    imgWidth: 580
+  });
 });
 $(document).ready(function() {
   //homepage slideshow functions
