--- a/app/views/smartrent/properties/index.js.erb
+++ b/app/views/smartrent/properties/index.js.erb
@@ -5,4 +5,8 @@ if($('#mapResults.mapOn')[0]){
   Property.loadMap();
 }
 
+$('.property-img').imageTooltip({
+  imgWidth: 580
+});
+
 $.unblockUI();
