--- a/app/views/layouts/smartrent/_left_nav_links.html.erb
+++ b/app/views/layouts/smartrent/_left_nav_links.html.erb
@@ -1,28 +1,28 @@
 <% if current_user.is_admin? %>
   <li class="<%= "active" if controller_name == "properties" || controller_name == "floor_plans" %>">
-    <a href="<%= raw admin_properties_path %>"> <i class="fa fa-building-o fa-fw"></i> SmartRent Properties </a>
+    <a href="<%= smartrent.admin_properties_path %>"> <i class="fa fa-building-o fa-fw"></i> SmartRent Properties </a>
   </li>
   <li class="<%= "active" if controller_name == "features" %>">
-    <a href="<%= raw admin_features_path %>"> <i class="fa fa-star fa-fw"></i> Features </a>
+    <a href="<%= raw smartrent.admin_features_path %>"> <i class="fa fa-star fa-fw"></i> Features </a>
   </li>
   <li class="<%= "active" if controller_name == "homes" || controller_name == "more_homes" || controller_name == "floor_plan_images" %>">
-    <a href="<%= raw admin_homes_path %>"> <i class="fa fa-home fa-fw"></i> Homes Communities Edits </a>
+    <a href="<%= raw smartrent.admin_homes_path %>"> <i class="fa fa-home fa-fw"></i> Homes Communities Edits </a>
   </li>
   <li class="<%= "active" if controller_name == "balances" %>">
-    <a href="<%= raw admin_balances_path %>"> <i class="fa fa-usd fa-fw"></i> Balances </a>
+    <a href="<%= raw smartrent.admin_balances_path %>"> <i class="fa fa-usd fa-fw"></i> Balances </a>
   </li>
   
   <li class="<%= "active" if controller_name == "test_accounts" %>">
-    <a href="<%= raw admin_test_accounts_path %>"> <i class="fa fa-check-square-o fa-fw"></i> Test Accounts </a>
+    <a href="<%= raw smartrent.admin_test_accounts_path %>"> <i class="fa fa-check-square-o fa-fw"></i> Test Accounts </a>
   </li>
   
   <li class="<%= "active" if controller_name == "rewards" %>" style="display:none">
-    <a href="<%= raw admin_rewards_path %>"> <i class="fa fa-trophy fa-fw"></i> Rewards </a>
+    <a href="<%= raw smartrent.admin_rewards_path %>"> <i class="fa fa-trophy fa-fw"></i> Rewards </a>
   </li>
   
 <% else %>
   <li class="<%= "active" if controller_name == "balances" %>">
-    <a href="<%= raw admin_balances_path %>"> <i class="fa fa-usd fa-fw"></i> Balances </a>
+    <a href="<%= raw smartrent.admin_balances_path %>"> <i class="fa fa-usd fa-fw"></i> Balances </a>
   </li>
   
 <% end %>
