--- a/app/assets/stylesheets/smartrent/application.css
+++ b/app/assets/stylesheets/smartrent/application.css
@@ -15,4 +15,5 @@
  *= require smartrent/bootstrap-theme
  *= require smartrent/layout
  *= require smartrent/prettyPhoto
+ *= require smartrent/footer
  */
