--- a/app/assets/stylesheets/smartrent/layout.css.erb
+++ b/app/assets/stylesheets/smartrent/layout.css.erb
@@ -6,6 +6,15 @@
       url('<%= font_path "FontSiteSans-LightCd-webfont.svg#webfont2X6HCJ0U" %>') format('svg');
       font-weight:normal;font-style:normal}
 
+@font-face {
+  font-family: HelveticaNeueCond;
+  font-weight: normal;
+  font-style: normal;
+  src:url(<%= font_path "HelveticaNeueLTStd-UltLtCn.otf"%>);
+}
+
+
+
 img{
   -ms-interpolation-mode:bicubic;
 }
