--- a/app/views/layouts/smartrent/_header.html.erb
+++ b/app/views/layouts/smartrent/_header.html.erb
@@ -20,7 +20,7 @@
         <li class="site-header__main-nav__item">
           <a href="/smartrent-quick-program-rules">Program Rules</a>
         </li>
-        <%if controller_name.to_s != "residents"%>
+
         <li class="site-header__main-nav__search js-headerSearchFormToggle">
           <button class="interactive-icon-button site-header__main-nav__search__icon js-headerSearchFormButton">
             <span class="screenreader-only">Search</span>
@@ -31,6 +31,8 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M18.984 6.422L13.406 12l5.578 5.578-1.406 1.406L12 13.406l-5.578 5.578-1.406-1.406L10.594 12 5.016 6.422l1.406-1.406L12 10.594l5.578-5.578z"></path></svg>
           </button>
           <div class="site-header__main-nav__search__form js-headerSearchForm">
+            <% if !request.fullpath.include? "member-login" %>
+            <% if !resident_signed_in? %>
             <div class="memberInfo">
               <div id="loginFields">
                 <div class="title">
@@ -56,9 +58,14 @@
                 </div>
               </div>
             </div>
+            <% else %>
+            <div class="form-group">
+              <input placeholder="EMAIL (MUST MATCH YOUR LEASE)" type="email" name="resident[email]" id="resident_email">
+            </div>
+            <% end %>
+            <% end %>
           </div>
         </li>
-        <% end %>
       </ul>
     </nav>
   </div>
