--- a/app/assets/stylesheets/smartrent/header.css
+++ b/app/assets/stylesheets/smartrent/header.css
@@ -3,9 +3,8 @@ header {
   line-height: 1.5;
   font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
   color: #84848b;
-  min-width: 1100px;
-
 }
+
 header li {
   list-style: none;
 }
@@ -31,6 +30,7 @@ header li {
   justify-content: center;
 }
 
+
 @media (min-width:1168px) {
   .site-header__main-nav {
     flex-direction: row;
@@ -53,6 +53,7 @@ header li {
   }
 }
 
+
 .site-header__main-nav__list {
   display: flex;
 }
@@ -62,6 +63,13 @@ header li {
     margin-left: 40px;
   }
 }
+
+@media (max-width:1100px) {
+  .site-header__main-nav__list {
+    padding: 10px;
+  }
+}
+
 
 .site-header__main-nav__item {
   font-size: 15px;
@@ -73,6 +81,43 @@ header li {
 @media (min-width:1168px) {
   .site-header__main-nav__item {
     font-size: 17px;
+  }
+}
+
+@media (max-width:520px) {
+  .site-header__main-nav__item {
+    font-size: 14px;
+  }
+}
+
+@media (max-width:900px) {
+  .site-header__main-nav__item {
+    margin-right: 20px;
+  }
+}
+
+@media (max-width:800px) {
+  .site-header__main-nav__item {
+    margin-right: 15px;
+  }
+}
+
+@media (max-width:700px) {
+  .site-header__main-nav__item {
+    margin-right: 5px;
+  }
+}
+
+
+@media (max-width:600px) {
+  .site-header__main-nav__item {
+    margin-right: 3px;
+  }
+}
+
+@media (max-width:500px) {
+  .site-header__main-nav__item {
+    margin-right: 3px;
   }
 }
 
@@ -147,7 +192,7 @@ header li {
   transition: all .3s ease-in-out;
   position: absolute;
   top: 0;
-  left: 0;
+  left: -10;
 }
 
 .site-header__main-nav__search__icon.-hidden {
@@ -240,7 +285,7 @@ button.interactive-icon-button {
 }
 
 .userInfo {
-width: 160px
+  width: 160px
 }
 
 
@@ -275,15 +320,15 @@ width: 160px
 }
 
 header ul.site-header__main-nav__list {
-   margin-top: 0;
-   margin-bottom: 0;
+ margin-top: 0;
+ margin-bottom: 0;
 }
 
 .memberInfo .links .link a {
-    color: #606060;
-    font-size: 15px;
+  color: #606060;
+  font-size: 15px;
 }
 
 .memberInfo .links .link a:hover{
-    color: #303030;
+  color: #303030;
 }
