Added terms of Use

--- a/app/views/layouts/smartrent/_footer.html.erb
+++ b/app/views/layouts/smartrent/_footer.html.erb
@@ -113,6 +113,8 @@
                       |
                       <%= link_to "Website Disclaimer", smartrent.website_disclaimer_path %>
                       |
+                      <%= link_to "Terms of Use", smartrent.terms_of_use_path%>
+                      |
                       <%= link_to "Contact Us", smartrent.new_contact_path %>
                       
                     </p>
