--- a/app/assets/stylesheets/smartrent/footer.css
+++ b/app/assets/stylesheets/smartrent/footer.css
@@ -56,7 +56,7 @@ footer .column-2-wide-special {
 }
 
 @media (max-width:700px) {
-footer .column-5-wide {
+  footer .column-5-wide {
     display: block;
     text-align: center;
     width: 100%;
@@ -64,7 +64,7 @@ footer .column-5-wide {
 }
 
 @media (max-width:700px) {
-footer .column-21-wide {
+  footer .column-21-wide {
     display: block;
     text-align: center;
     width: 100%;
@@ -72,7 +72,7 @@ footer .column-21-wide {
 }
 
 @media (max-width:700px) {
-footer .column-13-wide {
+  footer .column-13-wide {
     display: block;
     text-align: center;
     width: 100%;
@@ -199,6 +199,7 @@ footer .screenreader-only {
 .footer-column {
   margin-left: 90px;
   white-space: nowrap;
+  margin-right: 45px;
 }
 
 @media (min-width:1168px) {
@@ -241,7 +242,7 @@ footer .screenreader-only {
 
 
 .footer-section{
-    margin-bottom: 50px;
+  margin-bottom: 50px;
 }
 
 
