--- a/app/assets/stylesheets/smartrent/header.css
+++ b/app/assets/stylesheets/smartrent/header.css
@@ -64,7 +64,7 @@ header li {
 
 .site-header__main-nav__list {
   display: flex;
-    margin-right: 40px;
+  margin-right: 40px;
 }
 
 @media (min-width:1168px) {
@@ -87,7 +87,7 @@ header li {
 
 @media (max-width:700px) {
   .site-header__main-nav__item {
-      margin-right: 5px;
+    margin-right: 5px;
   }
 }
 
@@ -276,9 +276,9 @@ button.interactive-icon-button {
 }
 
 @media (max-width:600px) {
-button.interactive-icon-button {
-  display: none;
-  
+  button.interactive-icon-button {
+    display: none;
+    
   }
 }
 
@@ -339,4 +339,9 @@ header ul.site-header__main-nav__list {
 
 .memberInfo .links .link a:hover{
   color: #303030;
+}
+
+@media (max-width:600px) {
+.site-header{
+margin-bottom: 0px;
 }
