Bozzuto SmartRent Program Official Rules

--- a/app/views/smartrent/pages/official_rules.html.erb
+++ b/app/views/smartrent/pages/official_rules.html.erb
@@ -1,7 +1,7 @@
 <div class="banner dropshadow">
   <div class="fixedWidth">
     <div class="text no-transform">
-      Bozzuto SmartRent Program | Rules of Program
+      Bozzuto SmartRent Program Official Rules
     </div>
   </div>
 </div>
