--- a/app/views/smartrent/pages/home.html.erb
+++ b/app/views/smartrent/pages/home.html.erb
@@ -15,15 +15,7 @@
 <section id="contentWrapper">
   <div class="fixedWidth">
     <div id="homeContent">
-      When you rent from a Bozzuto SmartRent apartment community, you earn a
-      $350 credit every month - up to a total of $10,000 - to help you
-      purchase a new <%= link_to "condominium" ,find_a_new_home_path  %>,
-      <%= link_to "townhome", find_a_new_home_path %> or
-      <%= link_to "single-family home", find_a_new_home_path %>
-       from <%= link_to "Bozzuto Homes", find_a_new_home_path %>.
-      Simple as that. No gimmicks. Best of all, no cost to you, whether you
-      choose to participate in SmartRent or not.
-      <%= link_to "Click here to learn more.", faq_path  %>
+      With the Bozzuto SmartRent program, purchasing a brand <%= link_to "new home" ,find_a_new_home_path  %> is well within reach. Each month that you rent from a Bozzuto participating property, you'll earn a $350 contribution, for a maximum of $10,000, towards the purchase of a brand new <%= link_to "Bozzuto Homes", find_a_new_home_path %>. Simple as that. Bozzuto SmartRent credits are applied towards the out-of-pocket costs associated with building a new home, helping to jump start your savings plan. Best of all, theres no cost to you and enrollment is automatic.
     </div>
     <%= render partial: "homes_slider" %>
   </div>
