Home ppage copy edits - list

--- a/app/views/smartrent/pages/home.html.erb
+++ b/app/views/smartrent/pages/home.html.erb
@@ -16,6 +16,12 @@
   <div class="fixedWidth">
     <div id="homeContent">
       With the Bozzuto SmartRent program, purchasing a brand <%= link_to "new home" ,find_a_new_home_path  %> is well within reach. Each month that you rent from a Bozzuto participating property, you'll earn a $350 contribution, for a maximum of $10,000, towards the purchase of a brand new <%= link_to "Bozzuto Homes", find_a_new_home_path %>. Simple as that. Bozzuto SmartRent credits are applied towards the out-of-pocket costs associated with building a new home, helping to jump start your savings plan. Best of all, theres no cost to you and enrollment is automatic.
+      <ul class="cty-features-list">
+          <li>Your rent stays the same, whether you choose to take advantage of SmartRent or not.</li>
+          <li> You will receive monthly email statements to let you know how your credits are adding up.</li>
+          <li> Bozzuto Homes are located throughout the D.C., Baltimore, and Annapolis areas and include distinctive condominium, townhome, and single-family home communities.</li>
+      </ul>
+      You may use SmartRent credits for up to 24 months are leaving a Bozzuto apartment property.
     </div>
     <%= render partial: "homes_slider" %>
   </div>
