Home ppage copy edits - style

--- a/app/views/smartrent/pages/home.html.erb
+++ b/app/views/smartrent/pages/home.html.erb
@@ -35,7 +35,8 @@
         }
         .sr-box .sr-box-title{
           color: #7395bc;
-          padding: 5px 0px;
+          font-weight: bold;
+          padding: 0px 0px 5px 0px;
           font-size: 1.2em;
         }
         .sr-box .sr-box-body{
