--- a/app/views/smartrent/pages/home.html.erb
+++ b/app/views/smartrent/pages/home.html.erb
@@ -16,8 +16,11 @@
   <div class="fixedWidth">
     <div id="homeContent">
       <style>
+        .sr-page-title{
+          color: #7395bc;
+        }
         .sr-col-2{
-          width: 45%;
+          width: 46%;
           float: left;
         }
         .sr-col-right{
@@ -43,8 +46,9 @@
           text-align: justify;
         }
       </style>
+      <h1 class="sr-page-title"> You do the renting. We do the saving. We do the saving. </h1>
       <div>
-      With the Bozzuto SmartRent program, purchasing a brand <%= link_to "new home" ,find_a_new_home_path  %> is well within reach. Each month that you rent from a Bozzuto participating property, you'll earn a $350 contribution, for a maximum of $10,000, towards the purchase of a brand new <%= link_to "Bozzuto Homes", find_a_new_home_path %>. Simple as that. Bozzuto SmartRent credits are applied towards the out-of-pocket costs associated with building a new home, helping to jump start your savings plan. Best of all, theres no cost to you and enrollment is automatic.
+      With the Bozzuto SmartRent program, purchasing a brand <%= link_to "new home" ,find_a_new_home_path  %> is well within reach. Each month that you rent from a Bozzuto participating property, you'll earn a $350 contribution, for a maximum of $10,000, towards the purchase of a brand new <%= link_to "Bozzuto Home", find_a_new_home_path %>. Simple as that. Bozzuto SmartRent credits are applied towards the out-of-pocket costs associated with building a new home, helping to jump start your savings plan. Best of all, theres no cost to you and enrollment is automatic.
       </div>
       <div>
         <div class="sr-col-2">
