--- a/app/assets/stylesheets/smartrent/layout.css.erb
+++ b/app/assets/stylesheets/smartrent/layout.css.erb
@@ -519,6 +519,36 @@ label{
   margin-bottom:10px;
 }
 
+.sr-page-title{
+  color: #7395bc;
+}
+.sr-col-2{
+  width: 46%;
+  float: left;
+}
+.sr-col-right{
+  float: right;
+}
+.sr-clearfix{
+  clear: both;
+}
+.sr-box{
+  float: right;
+  background-color: #f4f6f6;
+  border-radius: 0px;
+  box-shadow: 1px 5px 15px 2px rgba(0, 0, 0, 0.25);
+  padding: 10px;
+}
+.sr-box .sr-box-title{
+  color: #7395bc;
+  font-weight: bold;
+  padding: 0px 0px 5px 0px;
+  font-size: 1.2em;
+}
+.sr-box .sr-box-body{
+  text-align: justify;
+}
+
 /* faq styles */
 .faq{
   width:100%;
