--- a/app/views/smartrent/pages/faq.html.erb
+++ b/app/views/smartrent/pages/faq.html.erb
@@ -91,7 +91,24 @@
       </div>
       <div class="answer">
         <p>
-         SmartRent funds can be used towards closing costs to reduce total out of pocket expense. They cannot replace the required earnest money deposit funds or interim deposits due during the purchase process.
+         A:SmartRent funds may be used in conjunction with other promotional programs offered at certain Bozzuto Homes communities.
+        </p>
+      </div>
+    </div>
+  </div>
+  <div class="item">
+    <div class="q">
+      Q:
+    </div>
+    <div class="qa">
+      <div class="question">
+        <p>
+          What types of costs can SmartRent be used towards?
+        </p>
+      </div>
+      <div class="answer">
+        <p>
+         A:SmartRent funds can be used towards closing costs to reduce total out of pocket expense. They cannot replace the required earnest money deposit funds or interim deposits due during the purchase process.
         </p>
       </div>
     </div>
